--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-aniso8601==8.0.0
+astroid==2.4.2
 attrs==20.2.0
 click==7.1.2
 flasgger==0.9.5
 Flask==1.1.2
-Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
+isort==5.6.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 marshmallow==3.8.0
+mccabe==0.6.1
 mistune==0.8.4
+pylint==2.6.0
 pyrsistent==0.17.3
-python-decouple==3.3
-python-dotenv==0.14.0
-pytz==2020.1
+python-decouple==3.1
 PyYAML==5.3.1
 six==1.15.0
 SQLAlchemy==1.3.19
+toml==0.10.1
 Werkzeug==1.0.1
+wrapt==1.12.1
