--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "react-to-print": "^2.11.0",
     "react-transition-group": "^4.4.1",
     "redux-localstorage-simple": "^2.3.1",
     "rewire": "^5.0.0",
