--- a/react-app/package.json
+++ b/react-app/package.json
@@ -23,7 +23,7 @@
     "redux-localstorage-simple": "^2.3.1",
     "rewire": "^5.0.0",
     "typeface-roboto": "^1.1.13",
-    "uuid": "^8.3.1"
+    "uuid-random": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
