--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==7.1.2
 flasgger==0.9.5
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.4
+gunicorn==20.0.4
 isort==5.6.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -15,6 +16,7 @@ mccabe==0.6.1
 mistune==0.8.4
 pylint==2.6.0
 pyrsistent==0.17.3
+python-dateutil==2.8.1
 python-decouple==3.1
 PyYAML==5.3.1
 six==1.15.0
@@ -22,4 +24,3 @@ SQLAlchemy==1.3.19
 toml==0.10.1
 Werkzeug==1.0.1
 wrapt==1.12.1
-python-dateutil=2.8.1
