--- a/react-app/src/store/mockups/settings.json
+++ b/react-app/src/store/mockups/settings.json
@@ -56,8 +56,12 @@
                 "validation": {
                     "email": true
                 }
-            }        
-    },
+            },
+            "extern": {
+                "type" : "boolean",
+                "label": "Externo"
+            }
+        },
     "productTableHead": [
         { "id": "description", "numeric": false, "disablePadding": false, "label": "Descripcion" },
         { "id": "departament", "numeric": false, "disablePadding": true, "label": "Grupo" },
@@ -288,7 +292,11 @@
             "validation": {
                 "email": true
             }
-        }        
+        },
+        "extern": {
+            "label": "Externo",
+            "type" : "boolean"
+        }
     },
     "purchaseProductFormFields": {
         "cost": {
